# raytracer

./: .gitignore  Cargo.toml  LICENSE  LinkedTorus.mtl  build.rs  complex.scene  cornell_box.scene  rustfmt.toml  test.scene  three-spheres.scene
scenes/: cornell_box.scene  csg.scene  csg1.scene  cylinder.scene  fog_light.scene  mesh.scene  room.scene  three-spheres.scene  torus.scene  transformations.scene
src/: algebra.rs  color.rs  direction.rs  kdtree.rs  lights.rs  main.rs  material.rs  matrix.rs  object.rs  photon.rs  point.rs  scene.rs  sdl.rs  sdl_grammar.rs  sdl_grammar.rustpeg  shader.rs  shapes.rs  system.rs  test_utils.rs  texture.rs  vector.rs
src/lights/: distant.rs  mod.rs  omni.rs
src/materials/: dielectric.rs  diffuse_light.rs  glass.rs  isotropic.rs  lambertian.rs  matte.rs  metal.rs  mod.rs  plastic.rs
src/shaders/: diffuse.rs  mod.rs  reflection.rs  transparency.rs
src/shapes/: bounding_box.rs  composite.rs  csg.rs  cube.rs  cylinder.rs  homogenous_medium.rs  mesh.rs  mod.rs  plane.rs  rectangle.rs  sphere.rs  torus.rs
