[package]
name = "raytracer"
version = "0.1.0"
authors = ["Gordon Tyler <gordon@doxxx.net>"]
edition = "2018"

[dependencies]
image = "0.14.0"
clap = { version = "4.5.3", features = ["derive"] }
wavefront_obj = "5.1.0"
pbr = "1.0.4"
num_cpus = "1.13.0"
time = "0.1"
rand = "0.8.4"
rayon = "1.5.1"
num-complex = "0.4.0"
num-traits = "0.2.14"
peg = "0.8.2"

[profile.release]
lto = "fat"
codegen-units = 1
